# RER-ENGINE

./: .gitignore  AGENTS.md  Checklist.md  README.md  package.json  tsconfig.node.json  tsconfig.web.json
.github/: copilot-instructions.md
src/main/: index.ts
src/main/Engine/: Cargo.toml
src/main/Engine/src/: camera.rs  ecs.rs  engine.rs  gizmo.rs  gizmo.wgsl  ipc.rs  main.rs  mesh.rs  physics.rs  scene.rs  scripting.rs  shader.wgsl  texture.rs
src/main/Engine/src/CONFIG_2D/: camera_2d.rs  grid_2d.rs  herramienta_de_dibujo.rs  mod.rs  move_physics_entity.rs  physics_2d.rs  stop_physics_entity.rs  teleport_entity.rs
src/main/Engine/src/CONFIG_3D/: camera_3d.rs  mesh_3d.rs  mod.rs  physics_3d.rs
src/main/Engine/src/CONFIG_BASE/: mod.rs
src/main/Engine/src/CONFIG_SHARED/: mod.rs
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  GameStyleSelector.tsx  ProjectSelector.tsx  SceneTree.tsx  index.css  main.tsx  useEngine.ts
src/renderer/src/2D/components/: ColliderPanel.tsx  ScenarioPanel.tsx  WorldPanel.tsx  index.ts
src/renderer/src/components/: EngineView.tsx  LogConsole.tsx  ProjectSelector.tsx  PropertiesPanel.tsx  SceneTree.tsx  ScriptEditorApp.tsx  ScriptEditorModalBody.tsx  SideBarLeft.tsx  TopBarEngine.tsx
src/renderer/src/context/: ModalContext.tsx  useContextEngine.tsx
src/renderer/src/hooks/: useAutoSave.ts  useEngine.ts  usePointDrawing.ts  useScripting.tsx
src/renderer/src/styles/: index.css
src/shared/: types.ts
src/shared-types/: types.ts
templates/2D/: template.json
templates/3D/: template.json
(+14 files in other folders)
