[package]
name = "rer-engine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rer-engine"
path = "src/main.rs"

[dependencies]
winit       = "0.30"
wgpu        = "22"
pollster    = "0.3"
glam        = "0.28"
bytemuck    = { version = "1", features = ["derive"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
log         = "0.4"
env_logger  = "0.11"
gltf        = "1"
image       = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rapier3d    = { version = "0.22", features = ["default"] }
